--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <span>/ person</span>
                         </div>
                         <div class="box-result_tip">
-                            <span class="tip">$4.27</span>
+                            <span class="tip">0</span>
                         </div>
                     </div>
                     <div class="box-result-bot">
@@ -93,7 +93,7 @@
                             <span>/ person</span>
                         </div>
                         <div class="box-result_tip">
-                            <span class="total">$32.79</span>
+                            <span class="total">0</span>
                         </div>
                     </div>
                     <div class="box-reuslt_button">
